--- a/kaggle_gfan_comprehensive.ipynb
+++ b/kaggle_gfan_comprehensive.ipynb
@@ -4719,6 +4719,190 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "99ab9f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =============================================================================\n",
+    "# GPU AND TORCH CONFIGURATION\n",
+    "# =============================================================================\n",
+    "import torch\n",
+    "\n",
+    "def get_device():\n",
+    "    \"\"\"Get the best available device (CUDA, MPS, or CPU)\"\"\"\n",
+    "    if torch.cuda.is_available():\n",
+    "        print(\"✅ CUDA is available. Using GPU.\")\n",
+    "        return torch.device('cuda')\n",
+    "    elif torch.backends.mps.is_available():\n",
+    "        print(\"✅ MPS is available. Using Apple Silicon GPU.\")\n",
+    "        return torch.device('mps')\n",
+    "    else:\n",
+    "        print(\"⚠️ No GPU found. Using CPU.\")\n",
+    "        return torch.device('cpu')\n",
+    "\n",
+    "DEVICE = get_device()\n",
+    "print(f\"Selected device: {DEVICE}\")\n",
+    "\n",
+    "# Set default tensor type\n",
+    "if DEVICE.type == 'cuda':\n",
+    "    torch.set_default_tensor_type(torch.cuda.FloatTensor)\n",
+    "\n",
+    "# Reproducibility\n",
+    "def set_seed(seed=42):\n",
+    "    \"\"\"Set seed for reproducibility\"\"\"\n",
+    "    torch.manual_seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    if torch.cuda.is_available():\n",
+    "        torch.cuda.manual_seed(seed)\n",
+    "        torch.cuda.manual_seed_all(seed)\n",
+    "        torch.backends.cudnn.deterministic = True\n",
+    "        torch.backends.cudnn.benchmark = False\n",
+    "\n",
+    "set_seed(42)\n",
+    "print(\"✅ Seed set for reproducibility\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3511df6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =============================================================================\n",
+    "# GPU AND TORCH CONFIGURATION\n",
+    "# =============================================================================\n",
+    "import torch\n",
+    "\n",
+    "def get_device():\n",
+    "    \"\"\"Get the best available device (CUDA, MPS, or CPU)\"\"\"\n",
+    "    if torch.cuda.is_available():\n",
+    "        print(\"✅ CUDA is available. Using GPU.\")\n",
+    "        return torch.device('cuda')\n",
+    "    elif torch.backends.mps.is_available():\n",
+    "        print(\"✅ MPS is available. Using Apple Silicon GPU.\")\n",
+    "        return torch.device('mps')\n",
+    "    else:\n",
+    "        print(\"⚠️ No GPU found. Using CPU.\")\n",
+    "        return torch.device('cpu')\n",
+    "\n",
+    "DEVICE = get_device()\n",
+    "print(f\"Selected device: {DEVICE}\")\n",
+    "\n",
+    "# Set default tensor type\n",
+    "if DEVICE.type == 'cuda':\n",
+    "    torch.set_default_tensor_type(torch.cuda.FloatTensor)\n",
+    "\n",
+    "# Reproducibility\n",
+    "def set_seed(seed=42):\n",
+    "    \"\"\"Set seed for reproducibility\"\"\"\n",
+    "    torch.manual_seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    if torch.cuda.is_available():\n",
+    "        torch.cuda.manual_seed(seed)\n",
+    "        torch.cuda.manual_seed_all(seed)\n",
+    "        torch.backends.cudnn.deterministic = True\n",
+    "        torch.backends.cudnn.benchmark = False\n",
+    "\n",
+    "set_seed(42)\n",
+    "print(\"✅ Seed set for reproducibility\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b48bef15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =============================================================================\n",
+    "# GPU AND TORCH CONFIGURATION\n",
+    "# =============================================================================\n",
+    "import torch\n",
+    "\n",
+    "def get_device():\n",
+    "    \"\"\"Get the best available device (CUDA, MPS, or CPU)\"\"\"\n",
+    "    if torch.cuda.is_available():\n",
+    "        print(\"✅ CUDA is available. Using GPU.\")\n",
+    "        return torch.device('cuda')\n",
+    "    elif torch.backends.mps.is_available():\n",
+    "        print(\"✅ MPS is available. Using Apple Silicon GPU.\")\n",
+    "        return torch.device('mps')\n",
+    "    else:\n",
+    "        print(\"⚠️ No GPU found. Using CPU.\")\n",
+    "        return torch.device('cpu')\n",
+    "\n",
+    "DEVICE = get_device()\n",
+    "print(f\"Selected device: {DEVICE}\")\n",
+    "\n",
+    "# Set default tensor type\n",
+    "if DEVICE.type == 'cuda':\n",
+    "    torch.set_default_tensor_type(torch.cuda.FloatTensor)\n",
+    "\n",
+    "# Reproducibility\n",
+    "def set_seed(seed=42):\n",
+    "    \"\"\"Set seed for reproducibility\"\"\"\n",
+    "    torch.manual_seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    if torch.cuda.is_available():\n",
+    "        torch.cuda.manual_seed(seed)\n",
+    "        torch.cuda.manual_seed_all(seed)\n",
+    "        torch.backends.cudnn.deterministic = True\n",
+    "        torch.backends.cudnn.benchmark = False\n",
+    "\n",
+    "set_seed(42)\n",
+    "print(\"✅ Seed set for reproducibility\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "831b6187",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =============================================================================\n",
+    "# GPU AND TORCH CONFIGURATION\n",
+    "# =============================================================================\n",
+    "import torch\n",
+    "\n",
+    "def get_device():\n",
+    "    \"\"\"Get the best available device (CUDA, MPS, or CPU)\"\"\"\n",
+    "    if torch.cuda.is_available():\n",
+    "        print(\"✅ CUDA is available. Using GPU.\")\n",
+    "        return torch.device('cuda')\n",
+    "    elif torch.backends.mps.is_available():\n",
+    "        print(\"✅ MPS is available. Using Apple Silicon GPU.\")\n",
+    "        return torch.device('mps')\n",
+    "    else:\n",
+    "        print(\"⚠️ No GPU found. Using CPU.\")\n",
+    "        return torch.device('cpu')\n",
+    "\n",
+    "DEVICE = get_device()\n",
+    "print(f\"Selected device: {DEVICE}\")\n",
+    "\n",
+    "# Set default tensor type\n",
+    "if DEVICE.type == 'cuda':\n",
+    "    torch.set_default_tensor_type(torch.cuda.FloatTensor)\n",
+    "\n",
+    "# Reproducibility\n",
+    "def set_seed(seed=42):\n",
+    "    \"\"\"Set seed for reproducibility\"\"\"\n",
+    "    torch.manual_seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    if torch.cuda.is_available():\n",
+    "        torch.cuda.manual_seed(seed)\n",
+    "        torch.cuda.manual_seed_all(seed)\n",
+    "        torch.backends.cudnn.deterministic = True\n",
+    "        torch.backends.cudnn.benchmark = False\n",
+    "\n",
+    "set_seed(42)\n",
+    "print(\"✅ Seed set for reproducibility\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "abab08fd",
    "metadata": {},
    "outputs": [],
